--- a/htr-united.yml
+++ b/htr-united.yml
@@ -1,39 +1,71 @@
+schema: https://htr-united.github.io/schema/2022-04-15/schema.json
+title: HTR-SETAF-Pierre-de-Vingle
+url: https://github.com/SETAFDH/HTR-SETAF-Pierre-de-Vingle
+project-name: SETAF project
+project-website: https://www.unige.ch/setaf/
 authors:
 - name: Sonia
+  surname: Solfrini
   orcid: 0009-0009-7367-048X
   roles:
   - transcriber
   - project-manager
   - quality-control
-  surname: Solfrini
 - name: Simon
+  surname: Gabay
   orcid: 0000-0001-9094-4475
   roles:
   - support
-  surname: Gabay
 - name: Geneviève
+  surname: Gross
   orcid: 0009-0006-5367-4262
   roles:
   - transcriber
   - project-manager
   - quality-control
-  surname: Gross
 - name: Pierre-Olivier
+  surname: Beaulnes
   orcid: 0009-0009-2475-6017
   roles:
   - transcriber
   - quality-control
-  surname: Beaulnes
 - name: Aurélia
+  surname: Marques Oliveira
   orcid: 0009-0009-9678-9811
   roles:
   - transcriber
   - quality-control
-  surname: Marques Oliveira
 - name: Daniela
+  surname: Solfaroli Camillocci
   roles:
   - project-manager
-  surname: Solfaroli Camillocci
+description: Data for the SETAF project, 16th-century French prints in Gothic characters.
+language:
+- fra
+script:
+- iso: Latn
+script-type: only-typed
+time:
+  notAfter: '1600'
+  notBefore: '1500'
+hands:
+  count: '1'
+  precision: exact
+license:
+- name: CC-BY 4.0
+  url: https://creativecommons.org/licenses/by/4.0/
+format: Alto-XML
+volume:
+- count: 654744
+  metric: characters
+- count: 980
+  metric: files
+- count: 25341
+  metric: lines
+- count: 2953
+  metric: regions
+production-software: eScriptorium + Kraken
+transcription-guidelines: A presentation of the rules established for the transcriptions will be available on our website.
 characters:
   members:
   - e
@@ -131,34 +163,3 @@ characters:
   - ̇
   - ꝗ
   mode: NFD
-description: Data for the SETAF project
-format: Alto-XML
-hands:
-  count: '1'
-  precision: exact
-institutions: []
-language:
-- fra
-license:
-- name: CC-BY 4.0
-  url: https://creativecommons.org/licenses/by/4.0/
-production-software: eScriptorium + Kraken
-project-name: SETAF project
-schema: https://htr-united.github.io/schema/2022-04-15/schema.json
-script:
-- iso: Latn
-script-type: only-typed
-time:
-  notAfter: '1599'
-  notBefore: '1500'
-title: HTR-SETAF-Pierre-de-Vingle
-url: https://github.com/SETAFDH/HTR-SETAF-Pierre-de-Vingle
-volume:
-- count: 654744
-  metric: characters
-- count: 980
-  metric: files
-- count: 25341
-  metric: lines
-- count: 2953
-  metric: regions
