--- a/htr-united.yml
+++ b/htr-united.yml
@@ -133,6 +133,7 @@ characters:
 description: >-
   OCR data for the SETAF project, 16th-century French prints in Gothic
   characters.
+citation-file-link: https://github.com/SETAFDH/HTR-SETAF-Pierre-de-Vingle/blob/main/CITATION.cff
 format: Alto-XML
 hands:
   count: '1'
