--- a/htr-united.yml
+++ b/htr-united.yml
@@ -31,10 +31,10 @@ authors:
   - quality-control
   surname: Marques Oliveira
 - name: Daniela
+  orcid: 0000-0002-2601-668X
   roles:
   - project-manager
   surname: Solfaroli Camillocci
-automatically-aligned: false
 characters:
   members:
   - e
@@ -138,7 +138,6 @@ format: Alto-XML
 hands:
   count: '1'
   precision: exact
-institutions: []
 language:
 - fra
 license:
