--- a/htr-united.yml
+++ b/htr-united.yml
@@ -148,9 +148,7 @@ hands:
   precision: exact
 language:
 - fra
-license:
-  type: CC-BY
-  version: 4.0
+license: CC-BY-4.0
 production-software: eScriptorium + Kraken
 project-name: FoNDUE
 project-website: >-
