--- a/htr-united.yml
+++ b/htr-united.yml
@@ -148,7 +148,9 @@ hands:
   precision: exact
 language:
 - fra
-license: CC-BY-4.0
+license:
+- name: CC-BY 4.0
+  url: https://creativecommons.org/licenses/by/4.0/
 production-software: eScriptorium + Kraken
 project-name: FoNDUE
 project-website: >-
